# libversion

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  COPYING  README.md  TODO.md
.github/workflows/: ci.yml
doc/: ALGORITHM.md
exttests/cmake-shared/: CMakeLists.txt
exttests/cmake-shared/1/: test
exttests/cmake-static/: CMakeLists.txt
exttests/pkgconfig/: Makefile  test.c
exttests/pkgconfig-shared/: test.c
exttests/pkgconfig-static/: Makefile
libversion/: CMakeLists.txt  compare.c  compare.h  config.h.in  libversion.pc.in  signature.c  version.h
libversion/private/: compare.c  compare.h  component.h  parse.c  parse.h  string.h
tests/: CMakeLists.txt  compare_deprecated_test.c  compare_fuzzer.c  compare_test.c  libversion_test.c  signature_test.c
utils/: CMakeLists.txt
utils/version_compare/: CMakeLists.txt  version_compare.c
utils/version_explain/: CMakeLists.txt  version_explain.c
utils/version_sort/: CMakeLists.txt
version_compare/: CMakeLists.txt  version_compare.c
version_explain/: version_explain.c
version_sort/: CMakeLists.txt  version_sort.cc
